# pokerok

./: CMakeLists.txt  final  main.cpp
include/: exceptions.hpp  poker.hpp  server.hpp
src/: poker.cpp  server.cpp
